--- a/src/MvcTemplate.Web/Views/Auth/Reset.cshtml
+++ b/src/MvcTemplate.Web/Views/Auth/Reset.cshtml
@@ -1,6 +1,6 @@
 @model AccountResetView
 
-<div class="title text-right">@Resource.ForPage(ViewContext.RouteData.Values)</div>
+<div class="title text-end">@Resource.ForPage(ViewContext.RouteData.Values)</div>
 
 <hr />
 
@@ -10,10 +10,12 @@
     <div class="input-group">
         <span class="fa fa-lock"></span>
         <input asp-for="NewPassword" asp-placeholder type="password" />
-        <span class="input-error fa fa-exclamation-triangle" data-toggle="tooltip" data-original-title="-" data-placement="right" data-delay="1"></span>
+        <span class="input-error fa fa-exclamation-triangle" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="-"></span>
     </div>
 
-    <button class="btn btn-block btn-primary mt-3 mb-3">@Resource.ForAction("Submit")</button>
+    <div class="d-grid">
+        <button class="btn btn-primary mt-3 mb-2">@Resource.ForAction("Submit")</button>
+    </div>
 </form>
 
 <hr />
