--- a/src/MvcTemplate.Web/Views/Profile/Edit.cshtml
+++ b/src/MvcTemplate.Web/Views/Profile/Edit.cshtml
@@ -15,52 +15,52 @@
         </div>
         <div class="widget-content">
             <form asp-antiforgery="true">
-                <div class="form-group">
-                    <div class="control-label col-md-3 col-lg-2">
+                <div class="form-group row">
+                    <div class="control-label col-md-4 col-xl-2">
                         <label asp-for="Username"></label>
                     </div>
-                    <div class="control-content col-md-9 col-lg-4">
+                    <div class="control-content col-md-8 col-xl-4">
                         <input asp-for="Username" />
                     </div>
-                    <div class="control-validation col">
+                    <div class="control-validation offset-md-4 col-md-8 offset-xl-0 col-xl-6">
                         <span asp-validation-for="Username"></span>
                     </div>
                 </div>
-                <div class="form-group">
-                    <div class="control-label col-md-3 col-lg-2">
+                <div class="form-group row">
+                    <div class="control-label col-md-4 col-xl-2">
                         <label asp-for="Password"></label>
                     </div>
-                    <div class="control-content col-md-9 col-lg-4">
+                    <div class="control-content col-md-8 col-xl-4">
                         <input asp-for="Password" type="password" />
                     </div>
-                    <div class="control-validation col">
+                    <div class="control-validation offset-md-4 col-md-8 offset-xl-0 col-xl-6">
                         <span asp-validation-for="Password"></span>
                     </div>
                 </div>
-                <div class="form-group">
-                    <div class="control-label col-md-3 col-lg-2">
+                <div class="form-group row">
+                    <div class="control-label col-md-4 col-xl-2">
                         <label asp-for="NewPassword"></label>
                     </div>
-                    <div class="control-content col-md-9 col-lg-4">
+                    <div class="control-content col-md-8 col-xl-4">
                         <input asp-for="NewPassword" type="password" autocomplete="new-password" />
                     </div>
-                    <div class="control-validation col">
+                    <div class="control-validation offset-md-4 col-md-8 offset-xl-0 col-xl-6">
                         <span asp-validation-for="NewPassword"></span>
                     </div>
                 </div>
-                <div class="form-group">
-                    <div class="control-label col-md-3 col-lg-2">
+                <div class="form-group row">
+                    <div class="control-label col-md-4 col-xl-2">
                         <label asp-for="Email"></label>
                     </div>
-                    <div class="control-content col-md-9 col-lg-4">
+                    <div class="control-content col-md-8 col-xl-4">
                         <input asp-for="Email" />
                     </div>
-                    <div class="control-validation col">
+                    <div class="control-validation offset-md-4 col-md-8 offset-xl-0 col-xl-6">
                         <span asp-validation-for="Email"></span>
                     </div>
                 </div>
-                <div class="form-group">
-                    <div class="form-actions col-lg-6">
+                <div class="form-group row">
+                    <div class="form-actions col-xl-6">
                         <button class="btn btn-primary">@Resource.ForAction("Submit")</button>
                     </div>
                 </div>
