--- a/src/MvcTemplate.Web/Views/Shared/_PublicLayout.cshtml
+++ b/src/MvcTemplate.Web/Views/Shared/_PublicLayout.cshtml
@@ -20,7 +20,6 @@
         <link rel="stylesheet" href="~/css/mvc-lookup/mvc-lookup.css">
         <link rel="stylesheet" href="~/css/mvc-grid/mvc-grid.css">
         <link rel="stylesheet" href="~/css/mvc-tree/mvc-tree.css">
-        <link rel="stylesheet" href="~/css/shared/alerts.css">
         <link rel="stylesheet" href="~/css/shared/content.css">
         <link rel="stylesheet" href="~/css/shared/header.css">
         <link rel="stylesheet" href="~/css/shared/navigation.css">
@@ -45,21 +44,22 @@
     <environment names="Development">
         <script src="~/js/moment/moment.js"></script>
         <script src="~/js/moment/cultures/moment.en.js"></script>
+        <script src="~/js/popper/popper.js"></script>
         <script src="~/js/rome/rome.standalone.js"></script>
         <script src="~/js/mvc-lookup/mvc-lookup.js"></script>
         <script src="~/js/mvc-lookup/cultures/mvc-lookup.en.js"></script>
         <script src="~/js/mvc-grid/mvc-grid.js"></script>
         <script src="~/js/mvc-grid/cultures/mvc-grid.en.js"></script>
         <script src="~/js/mvc-tree/mvc-tree.js"></script>
-        <script src="~/js/bootstrap/bootstrap-native.js"></script>
+        <script src="~/js/bootstrap/bootstrap.js"></script>
         <script src="~/js/wellidate/wellidate.js"></script>
         <script src="~/js/shared/widgets/alerts.js"></script>
         <script src="~/js/shared/widgets/datepicker.js"></script>
         <script src="~/js/shared/widgets/grid.js"></script>
-        <script src="~/js/shared/widgets/header.js"></script>
         <script src="~/js/shared/widgets/lookup.js"></script>
         <script src="~/js/shared/widgets/navigation.js"></script>
         <script src="~/js/shared/widgets/number.js"></script>
+        <script src="~/js/shared/widgets/tooltip.js"></script>
         <script src="~/js/shared/widgets/tree.js"></script>
         <script src="~/js/shared/widgets/validator.js"></script>
         <script action="shared"></script>
