--- a/src/MvcTemplate.Web/Templates/Module/Web/Create.cshtml
+++ b/src/MvcTemplate.Web/Templates/Module/Web/Create.cshtml
@@ -11,11 +11,11 @@
             <form asp-antiforgery="true">
                 @foreach (PropertyInfo property in Model.ViewProperties)
                 {
-                <div class="form-group">
-                    <div class="control-label col-md-3 col-lg-2">
+                <div class="form-group row">
+                    <div class="control-label col-md-4 col-xl-2">
                         <label asp-for="@property.Name"></label>
                     </div>
-                    <div class="control-content col-md-9 col-lg-4">
+                    <div class="control-content col-md-8 col-xl-4">
                         @if (property.PropertyType == typeof(String))
                         {
                         <input asp-for="@property.Name" />
@@ -41,13 +41,13 @@
                         <input asp-for="@property.Name" type="text" />
                         }
                     </div>
-                    <div class="control-validation col">
+                    <div class="control-validation offset-md-4 col-md-8 offset-xl-0 col-xl-6">
                         <span asp-validation-for="@property.Name"></span>
                     </div>
                 </div>
                 }
-                <div class="form-group">
-                    <div class="form-actions col-lg-6">
+                <div class="form-group row">
+                    <div class="form-actions col-xl-6">
                         <button class="btn btn-primary">@@Resource.ForAction("Submit")</button>
                     </div>
                 </div>
