--- a/src/MvcTemplate.Web/Views/Administration/Accounts/Details.cshtml
+++ b/src/MvcTemplate.Web/Views/Administration/Accounts/Details.cshtml
@@ -14,37 +14,37 @@
             </div>
         </div>
         <div class="widget-content">
-            <div class="form-group">
-                <div class="control-label col-md-3 col-lg-2">
+            <div class="form-group row">
+                <div class="control-label col-md-4 col-xl-2">
                     <label asp-for="Username"></label>
                 </div>
-                <div class="control-content col-md-9 col-lg-4">
+                <div class="control-content col-md-8 col-xl-4">
                     <input asp-for="Username" />
                 </div>
             </div>
-            <div class="form-group">
-                <div class="control-label col-md-3 col-lg-2">
+            <div class="form-group row">
+                <div class="control-label col-md-4 col-xl-2">
                     <label asp-for="Email"></label>
                 </div>
-                <div class="control-content col-md-9 col-lg-4">
+                <div class="control-content col-md-8 col-xl-4">
                     <input asp-for="Email" />
                 </div>
             </div>
-            <div class="form-group">
-                <div class="control-label col-md-3 col-lg-2">
+            <div class="form-group row">
+                <div class="control-label col-md-4 col-xl-2">
                     <label asp-for="IsLocked"></label>
                 </div>
-                <div class="control-content col-md-9 col-lg-4">
+                <div class="control-content col-md-8 col-xl-4">
                     <input asp-for="IsLocked" />
                 </div>
             </div>
-            <div class="form-group">
+            <div class="form-group row">
             </div>
-            <div class="form-group">
-                <div class="control-label col-md-3 col-lg-2">
+            <div class="form-group row">
+                <div class="control-label col-md-4 col-xl-2">
                     <label asp-for="RoleTitle"></label>
                 </div>
-                <div class="control-content col-md-9 col-lg-4">
+                <div class="control-content col-md-8 col-xl-4">
                     <input asp-for="RoleTitle" />
                 </div>
             </div>
