--- a/src/MvcTemplate.Web/Views/Administration/Accounts/Edit.cshtml
+++ b/src/MvcTemplate.Web/Views/Administration/Accounts/Edit.cshtml
@@ -15,54 +15,54 @@
         </div>
         <div class="widget-content">
             <form asp-antiforgery="true">
-                <div class="form-group">
-                    <div class="control-label col-md-3 col-lg-2">
+                <div class="form-group row">
+                    <div class="control-label col-md-4 col-xl-2">
                         <label asp-for="Username"></label>
                     </div>
-                    <div class="control-content col-md-9 col-lg-4">
+                    <div class="control-content col-md-8 col-xl-4">
                         <input asp-for="Username" readonly />
                     </div>
-                    <div class="control-validation col">
+                    <div class="control-validation offset-md-4 col-md-8 offset-xl-0 col-xl-6">
                         <span asp-validation-for="Username"></span>
                     </div>
                 </div>
-                <div class="form-group">
-                    <div class="control-label col-md-3 col-lg-2">
+                <div class="form-group row">
+                    <div class="control-label col-md-4 col-xl-2">
                         <label asp-for="Email"></label>
                     </div>
-                    <div class="control-content col-md-9 col-lg-4">
+                    <div class="control-content col-md-8 col-xl-4">
                         <input asp-for="Email" readonly />
                     </div>
-                    <div class="control-validation col">
+                    <div class="control-validation offset-md-4 col-md-8 offset-xl-0 col-xl-6">
                         <span asp-validation-for="Email"></span>
                     </div>
                 </div>
-                <div class="form-group">
-                    <div class="control-label col-md-3 col-lg-2">
+                <div class="form-group row">
+                    <div class="control-label col-md-4 col-xl-2">
                         <label asp-for="IsLocked"></label>
                     </div>
-                    <div class="control-content col-md-9 col-lg-4">
+                    <div class="control-content col-md-8 col-xl-4">
                         <input asp-for="IsLocked" />
                     </div>
-                    <div class="control-validation col">
+                    <div class="control-validation offset-md-4 col-md-8 offset-xl-0 col-xl-6">
                         <span asp-validation-for="IsLocked"></span>
                     </div>
                 </div>
-                <div class="form-group">
+                <div class="form-group row">
                 </div>
-                <div class="form-group">
-                    <div class="control-label col-md-3 col-lg-2">
+                <div class="form-group row">
+                    <div class="control-label col-md-4 col-xl-2">
                         <label asp-for="RoleId"></label>
                     </div>
-                    <div class="control-content col-md-9 col-lg-4">
+                    <div class="control-content col-md-8 col-xl-4">
                         <div mvc-lookup-for="RoleId" handler="@nameof(Lookup.Role)"></div>
                     </div>
-                    <div class="control-validation col">
+                    <div class="control-validation offset-md-4 col-md-8 offset-xl-0 col-xl-6">
                         <span asp-validation-for="RoleId"></span>
                     </div>
                 </div>
-                <div class="form-group">
-                    <div class="form-actions col-lg-6">
+                <div class="form-group row">
+                    <div class="form-actions col-xl-6">
                         <button class="btn btn-primary">@Resource.ForAction("Submit")</button>
                     </div>
                 </div>
