--- a/src/MvcTemplate.Web/Views/Administration/Roles/Details.cshtml
+++ b/src/MvcTemplate.Web/Views/Administration/Roles/Details.cshtml
@@ -19,19 +19,19 @@
             </div>
         </div>
         <div class="widget-content">
-            <div class="form-group">
-                <div class="control-label col-md-3 col-lg-2">
+            <div class="form-group row">
+                <div class="control-label col-md-4 col-xl-2">
                     <label asp-for="Title"></label>
                 </div>
-                <div class="control-content col-md-9 col-lg-4">
+                <div class="control-content col-md-8 col-xl-4">
                     <input asp-for="Title" />
                 </div>
             </div>
-            <div class="form-group">
-                <div class="control-label col-md-3 col-lg-2">
+            <div class="form-group row">
+                <div class="control-label col-md-4 col-xl-2">
                     <label asp-for="Permissions"></label>
                 </div>
-                <div class="control-content col-md-9 col-lg-4">
+                <div class="control-content col-md-8 col-xl-4">
                     <div mvc-tree-for="Permissions" hide-depth="3"></div>
                 </div>
             </div>
