--- a/src/MvcTemplate.Web/Views/Administration/Roles/Edit.cshtml
+++ b/src/MvcTemplate.Web/Views/Administration/Roles/Edit.cshtml
@@ -20,30 +20,30 @@
         </div>
         <div class="widget-content">
             <form asp-antiforgery="true">
-                <div class="form-group">
-                    <div class="control-label col-md-3 col-lg-2">
+                <div class="form-group row">
+                    <div class="control-label col-md-4 col-xl-2">
                         <label asp-for="Title"></label>
                     </div>
-                    <div class="control-content col-md-9 col-lg-4">
+                    <div class="control-content col-md-8 col-xl-4">
                         <input asp-for="Title" />
                     </div>
-                    <div class="control-validation col">
+                    <div class="control-validation offset-md-4 col-md-8 offset-xl-0 col-xl-6">
                         <span asp-validation-for="Title"></span>
                     </div>
                 </div>
-                <div class="form-group">
-                    <div class="control-label col-md-3 col-lg-2">
+                <div class="form-group row">
+                    <div class="control-label col-md-4 col-xl-2">
                         <label asp-for="Permissions"></label>
                     </div>
-                    <div class="control-content col-md-9 col-lg-4">
+                    <div class="control-content col-md-8 col-xl-4">
                         <div mvc-tree-for="Permissions" hide-depth="3"></div>
                     </div>
-                    <div class="control-validation col">
+                    <div class="control-validation offset-md-4 col-md-8 offset-xl-0 col-xl-6">
                         <span asp-validation-for="Permissions"></span>
                     </div>
                 </div>
-                <div class="form-group">
-                    <div class="form-actions col-lg-6">
+                <div class="form-group row">
+                    <div class="form-actions col-xl-6">
                         <button class="btn btn-primary">@Resource.ForAction("Submit")</button>
                     </div>
                 </div>
