--- a/src/MvcTemplate.Web/Views/Auth/Recover.cshtml
+++ b/src/MvcTemplate.Web/Views/Auth/Recover.cshtml
@@ -1,6 +1,6 @@
 @model AccountRecoveryView
 
-<div class="title text-right">@Resource.ForPage(ViewContext.RouteData.Values)</div>
+<div class="title text-end">@Resource.ForPage(ViewContext.RouteData.Values)</div>
 
 <hr />
 
@@ -10,14 +10,16 @@
     <div class="input-group">
         <span class="fa fa-envelope"></span>
         <input asp-for="Email" asp-placeholder />
-        <span class="input-error fa fa-exclamation-triangle" data-toggle="tooltip" data-original-title="-" data-placement="right" data-delay="1"></span>
+        <span class="input-error fa fa-exclamation-triangle" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="-"></span>
     </div>
 
-    <button class="btn btn-block btn-primary mt-3 mb-3">@Resource.ForAction(nameof(Auth.Recover))</button>
+    <div class="d-grid">
+        <button class="btn btn-primary mt-3 mb-2">@Resource.ForAction(nameof(Auth.Recover))</button>
+    </div>
 </form>
 
 <hr />
 
-<div class="actions text-right">
-    <a asp-action="@nameof(Auth.Login)" class="title fa fa-sign-in-alt" data-toggle="tooltip" data-original-title="@Resource.ForAction(nameof(Auth.Login))" data-placement="bottom" data-delay="1"></a>
+<div class="actions text-end">
+    <a asp-action="@nameof(Auth.Login)" class="title fa fa-sign-in-alt" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-original-title="@Resource.ForAction(nameof(Auth.Login))"></a>
 </div>
