--- a/src/MvcTemplate.Web/wwwroot/css/shared/header.css
+++ b/src/MvcTemplate.Web/wwwroot/css/shared/header.css
@@ -28,10 +28,6 @@
     margin-right: 5px;
 }
 
-.header .btn > a .caret {
-    margin-left: 5px;
-}
-
 .header .btn img {
     margin-bottom: 3px;
 }
@@ -46,21 +42,20 @@
     margin-right: 5px;
 }
 
-.header .btn .dropdown-toggle::after {
-    vertical-align: 0.2em;
-}
-
-@media (max-width: 767px) {
+@media (max-width: 767.98px) {
     .header .btn > a .fa {
         margin: 0;
+    }
+
+    .header .dropdown-toggle::after {
+        display: none;
     }
 
     .header .dropdown-menu {
         left: -120px;
     }
 
-    .header .text,
-    .header .caret {
+    .header .text {
         display: none;
     }
 }
