--- a/src/MvcTemplate.Web/wwwroot/css/shared/overrides.css
+++ b/src/MvcTemplate.Web/wwwroot/css/shared/overrides.css
@@ -1,17 +1,43 @@
 /* bootstrap */
 a {
+    text-decoration: none;
     color: #555555;
 }
 
 a:hover {
-    text-decoration: none;
     color: #396b86;
 }
 
 hr {
     border-bottom: 2px solid #f5f5f5;
+    background-color: transparent;
     border-top: 2px solid #dddddd;
     margin: 0.5rem 0;
+    opacity: 1;
+}
+
+.alerts {
+    margin: calc(var(--bs-gutter-x) / 4) 0;
+}
+
+.alert {
+    text-align: justify;
+    font-size: 0.875em;
+    padding: 0.5em 1em;
+    margin: 0;
+}
+
+.alert + .alert {
+    margin-top: calc(var(--bs-gutter-x) / 4);
+}
+
+.alert-dismissible {
+    padding-right: 3em;
+}
+
+.alert-dismissible .btn-close {
+    padding: 0.75rem 1rem;
+    font-size: 0.75em;
 }
 
 .breadcrumb {
@@ -42,7 +68,7 @@ hr {
     color: #777777;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 767.98px) {
     .breadcrumb a .icon {
         padding-right: 0;
     }
@@ -84,12 +110,32 @@ hr {
     filter: grayscale(100%);
 }
 
-.input-group .form-control {
-    z-index: 1;
+.form-check-input {
+    margin: 0.6875em 0;
 }
 
-.form-control[type="checkbox"] {
-    width: auto;
+.form-select[readonly] {
+    background-color: #e9ecef;
+}
+
+.form-check-input[readonly] {
+    filter: grayscale(1);
+}
+
+.form-select[readonly]:focus,
+.form-control[readonly]:focus,
+.form-check-input[readonly]:focus {
+    box-shadow: 0 0 0 0.25rem rgb(154 150 150 / 0.25);
+    border-color: #ced4da;
+}
+
+.form-check-label {
+    border: 1px solid transparent;
+    padding: 0.375rem 0;
+}
+
+.input-group .form-control {
+    z-index: 1;
 }
 
 /* rome */
@@ -180,29 +226,29 @@ hr {
 
 .mvc-lookup-readonly .mvc-lookup-browser:focus,
 .mvc-lookup-readonly.mvc-lookup-focus .mvc-lookup-control {
-    box-shadow: 0 0 0 0.2rem rgb(154 149 150 / 0.25);
+    box-shadow: 0 0 0 0.25rem rgb(13 110 253 / 0.25);
     border-color: #ced4da;
     outline: none;
 }
 
 .mvc-lookup-browser:focus,
 .mvc-lookup-focus .mvc-lookup-control {
-    box-shadow: 0 0 0 0.2rem rgb(0 123 255 / 0.25);
-    border-color: #80bdff;
+    box-shadow: 0 0 0 0.25rem rgb(13 110 253 / 0.25);
+    border-color: #86b7fe;
     outline: none;
 }
 
 .mvc-lookup-rows:focus,
 .mvc-lookup-search:focus {
-    box-shadow: 0 0 0 0.1rem rgb(0 123 255 / 0.25);
-    border-color: #80bdff;
+    box-shadow: 0 0 0 0.25rem rgb(13 110 253 / 0.25);
+    border-color: #86b7fe;
     position: relative;
     outline: none;
 }
 
 .mvc-lookup-browser:focus.input-validation-error,
 .mvc-lookup-focus .mvc-lookup-control.input-validation-error {
-    box-shadow: 0 0 0 0.2rem rgb(220 53 69 / 0.25);
+    box-shadow: 0 0 0 0.25rem rgb(220 53 69 / 0.25);
     border-color: #dc3545;
 }
 
