--- a/src/MvcTemplate.Web/Views/Auth/_AuthAlerts.cshtml
+++ b/src/MvcTemplate.Web/Views/Auth/_AuthAlerts.cshtml
@@ -3,15 +3,17 @@
     {
         foreach (Alert alert in JsonSerializer.Deserialize<Alerts>(alerts)!)
         {
-            <div id="@alert.Id" class="alert alert-@alert.Type.ToString().ToLowerInvariant() text-center" data-timeout="@alert.Timeout">
-                <span>@alert.Message</span><span class="close">×</span>
+            <div id="@alert.Id" class="alert alert-@alert.Type.ToString().ToLowerInvariant() alert-dismissible fade show" data-timeout="@alert.Timeout">
+                @alert.Message
+                <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
             </div>
         }
     }
     @foreach (String message in ViewData.ModelState.SelectMany(state => state.Value.Errors).Select(error => error.ErrorMessage))
     {
-        <div class="alert alert-danger text-center">
-            <span>@message</span><span class="close">×</span>
+        <div class="alert alert-danger alert-dismissible fade show text-center">
+            @message
+            <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
         </div>
     }
 </div>
