--- a/src/MvcTemplate.Web/wwwroot/css/mvc-lookup/mvc-lookup.css
+++ b/src/MvcTemplate.Web/wwwroot/css/mvc-lookup/mvc-lookup.css
@@ -1,5 +1,5 @@
 /*!
- * Mvc.Lookup 5.1.3
+ * Mvc.Lookup 5.2.0
  *
  * Copyright © NonFactors
  *
@@ -54,7 +54,7 @@
 }
 
 .mvc-lookup-input {
-    padding: 0.25em 0.25em 0.25em 0.5em;
+    padding: 0.375rem 0.75rem;
     box-sizing: border-box;
     line-height: 1.5;
     background: none;
@@ -110,12 +110,13 @@
 
 .mvc-lookup-browser {
     border-radius: 0 0.25em 0.25em 0;
+    min-width: calc(2.25rem + 2px);
     border: 1px solid #ced4da;
-    padding: 0.375em 0.75em;
     background: #e9ecef;
     margin-left: -1px;
     cursor: pointer;
     color: #495057;
+    padding: 0;
 }
 
 .mvc-lookup-browser:focus {
@@ -127,7 +128,7 @@
 }
 
 .mvc-lookup-icon {
-    margin: 0 0.125em 0.125em 0;
+    margin: 0 0.125em 0.125em 0.625rem;
     transform: rotate(310deg);
     box-sizing: border-box;
     border: 0.125em solid;
@@ -438,7 +439,7 @@
 }
 
 .mvc-lookup-autocomplete {
-    border: 1px solid #80bdff;
+    border: 1px solid #86b7fe;
     background: #ffffff;
     margin-bottom: 1em;
     position: absolute;
@@ -454,7 +455,7 @@
 
 .mvc-lookup-autocomplete li.active {
     background-color: rgb(128 189 255 / 0.15);
-    border: 1px solid #80bdff;
+    border: 1px solid #86b7fe;
     margin: -1px;
 }
 
