Date picker input styling consistency
- Made date picker input styling consistent with other select type components by making it an input group.

--- a/src/MvcTemplate.Web/Templates/Module/Web/Create.cshtml
+++ b/src/MvcTemplate.Web/Templates/Module/Web/Create.cshtml
@@ -12,7 +12,7 @@
                 @foreach (PropertyInfo property in Model.ViewProperties)
                 {
                     Type type = Nullable.GetUnderlyingType(property.PropertyType) ?? property.PropertyType;
- 
+
                 <div class="form-group row">
                     <div class="control-label col-md-4 col-xl-2">
                         <label asp-for="@property.Name"></label>
@@ -24,7 +24,7 @@
                         }
                         else if (type == typeof(DateTime))
                         {
-                        <input asp-for="@property.Name" asp-format="{0:d}" class="datepicker" type="text" />
+                        <input asp-for="@property.Name" asp-format="{0:d}" class="date-picker" />
                         }
                         else if (type == typeof(Boolean))
                         {
@@ -40,7 +40,7 @@
                         }
                         else
                         {
-                        <input asp-for="@property.Name" type="text" />
+                        <input asp-for="@property.Name" />
                         }
                     </div>
                     <div class="control-validation offset-md-4 col-md-8 offset-xl-0 col-xl-6">
