--- a/src/MvcTemplate.Web/wwwroot/css/shared/overrides.css
+++ b/src/MvcTemplate.Web/wwwroot/css/shared/overrides.css
@@ -139,9 +139,34 @@ hr {
 }
 
 /* rome */
+.date-picker-browser {
+    max-width: calc(2.25rem + 2px);
+    min-width: calc(2.25rem + 2px);
+    justify-content: center;
+    font-weight: bold;
+    outline: none;
+    padding: 0;
+    z-index: 1;
+}
+
+.date-picker-browser[disabled] {
+    cursor: not-allowed;
+}
+
+.date-picker-browser:focus {
+    box-shadow: 0 0 0 0.25rem rgb(13 110 253 / 0.25);
+    border-color: #86b7fe;
+}
+
+.date-picker-browser[disabled]:focus {
+    box-shadow: 0 0 0 0.25rem rgb(154 150 150 / 0.25);
+    border-color: #ced4da;
+}
+
 .rd-container {
     font-family: Verdana, Arial, sans-serif;
     background: transparent;
+    z-index: 10000;
     border: none;
     padding: 0;
 }
