Action specific view generation
- Added support for using action specific views when generating a module.

--- a/src/MvcTemplate.Web/Templates/Module/Controllers/Controller.cshtml
+++ b/src/MvcTemplate.Web/Templates/Module/Controllers/Controller.cshtml
@@ -12,9 +12,9 @@ namespace @Model.ControllerNamespace
     {
     @:[Area(nameof(Area.@(Model.Area)))]
     }
-    public class @Model.Controller : ValidatedController<@Model.Validator, @Model.Service>
+    public class @Model.Controller : ValidatedController<@(Model.Model)Validator, @(Model.Model)Service>
     {
-        public @(Model.Controller)(@Model.Validator validator, @Model.Service service)
+        public @(Model.Controller)(@(Model.Model)Validator validator, @(Model.Model)Service service)
             : base(validator, service)
         {
         }
@@ -32,12 +32,12 @@ namespace @Model.ControllerNamespace
         }
 
         [HttpPost]
-        public ActionResult Create(@Model.View @Model.ModelVarName)
+        public ActionResult Create(@Model.Views["Create"] @Model.VarName)
         {
-            if (!Validator.CanCreate(@Model.ModelVarName))
-                return View(@Model.ModelVarName);
+            if (!Validator.CanCreate(@Model.VarName))
+                return View(@Model.VarName);
 
-            Service.Create(@Model.ModelVarName);
+            Service.Create(@Model.VarName);
 
             return RedirectToAction(nameof(Index));
         }
@@ -46,22 +46,22 @@ namespace @Model.ControllerNamespace
         [AuthorizeAs(nameof(Index))]
         public ActionResult Details(Int64 id)
         {
-            return NotEmptyView(Service.Get<@Model.View>(id));
+            return NotEmptyView(Service.Get<@Model.Views["Details"]>(id));
         }
 
         [HttpGet]
         public ActionResult Edit(Int64 id)
         {
-            return NotEmptyView(Service.Get<@Model.View>(id));
+            return NotEmptyView(Service.Get<@Model.Views["Edit"]>(id));
         }
 
         [HttpPost]
-        public ActionResult Edit(@Model.View @Model.ModelVarName)
+        public ActionResult Edit(@Model.Views["Edit"] @Model.VarName)
         {
-            if (!Validator.CanEdit(@Model.ModelVarName))
-                return View(@Model.ModelVarName);
+            if (!Validator.CanEdit(@Model.VarName))
+                return View(@Model.VarName);
 
-            Service.Edit(@Model.ModelVarName);
+            Service.Edit(@Model.VarName);
 
             return RedirectToAction(nameof(Index));
         }
@@ -69,7 +69,7 @@ namespace @Model.ControllerNamespace
         [HttpGet]
         public ActionResult Delete(Int64 id)
         {
-            return NotEmptyView(Service.Get<@Model.View>(id));
+            return NotEmptyView(Service.Get<@Model.Views["Delete"]>(id));
         }
 
         [HttpPost]
