--- a/src/MvcTemplate.Web/Templates/Module/Objects/Model.cshtml
+++ b/src/MvcTemplate.Web/Templates/Module/Objects/Model.cshtml
@@ -6,5 +6,7 @@ namespace MvcTemplate.Objects
 {
     public class @Model.Model : AModel
     {
+        [StringLength(128)]
+        public String Title { get; set; }
     }
 }
