--- a/src/MvcTemplate.Web/Templates/Module/Web/Details.cshtml
+++ b/src/MvcTemplate.Web/Templates/Module/Web/Details.cshtml
@@ -1,5 +1,5 @@
 @model ModuleModel
-@@model @Model.View
+@@model @Model.Views["Details"]
 
 <div class="col">
     <div class="widget-box readonly">
@@ -20,7 +20,7 @@
             </div>
         </div>
         <div class="widget-content">
-            @foreach (PropertyInfo property in Model.ViewProperties)
+            @foreach (PropertyInfo property in Model.ViewProperties["Details"])
             {
                 Type type = Nullable.GetUnderlyingType(property.PropertyType) ?? property.PropertyType;
 
@@ -45,7 +45,7 @@
                     {
                     <select asp-for="@property.Name" asp-items="Html.GetEnumSelectList<@type.Name>()"></select>
                     }
-                    else if (Model.Relations[property] is String relation)
+                    else if (Model.Relations.GetValueOrDefault(property.Name, null) is String relation)
                     {
                     <div mvc-lookup-for="@property.Name" handler="@@nameof(Lookup.@relation)"></div>
                     }
