--- a/src/MvcTemplate.Web/Templates/Module/Objects/View.cshtml
+++ b/src/MvcTemplate.Web/Templates/Module/Objects/View.cshtml
@@ -4,7 +4,9 @@ using System.ComponentModel.DataAnnotations;
 
 namespace MvcTemplate.Objects
 {
-    public class @Model.View : AView<@Model.Model>
+    public class @(Model.Model)View : AView<@Model.Model>
     {
+        [StringLength(128)]
+        public String Title { get; set; }
     }
 }
