--- a/src/MvcTemplate.Web/Templates/Module/Resources/View.cshtml
+++ b/src/MvcTemplate.Web/Templates/Module/Resources/View.cshtml
@@ -1,12 +1,12 @@
 @model ModuleModel
 @{
     PropertyInfo[] properties = Model
-        .ViewProperties
+        .ViewProperties[""]
         .OrderBy(property => property.Name)
         .ToArray();
 
     PropertyInfo[] indexes = Model
-        .Indexes
+        .Indexes[""]
         .OrderBy(property => property.Name)
         .ToArray();
 }
@@ -14,7 +14,7 @@
     "Titles": {
         @for (Int32 i = 0; i < properties.Length; i++)
         {
-            String title = Model.Relations[properties[i]] == null ? properties[i].Name.Humanize() : properties[i].Name.Substring(0, properties[i].Name.Length - 2).Humanize();
+            String title = Model.Relations.GetValueOrDefault(properties[i].Name, null) is String ? properties[i].Name.Substring(0, properties[i].Name.Length - 2).Humanize() : properties[i].Name.Humanize();
 
             if (i + 1 < properties.Length)
             {
