--- a/src/MvcTemplate.Web/Templates/Module/Services/Service.cshtml
+++ b/src/MvcTemplate.Web/Templates/Module/Services/Service.cshtml
@@ -6,9 +6,9 @@ using System.Linq;
 
 namespace MvcTemplate.Services
 {
-    public class @Model.Service : AService
+    public class @(Model.Model)Service : AService
     {
-        public @(Model.Service)(IUnitOfWork unitOfWork)
+        public @(Model.Model)Service(IUnitOfWork unitOfWork)
             : base(unitOfWork)
         {
         }
@@ -17,26 +17,26 @@ namespace MvcTemplate.Services
         {
             return UnitOfWork.GetAs<@Model.Model, TView>(id);
         }
-        public IQueryable<@Model.View> GetViews()
+        public IQueryable<@Model.Views["Index"]> GetViews()
         {
             return UnitOfWork
                 .Select<@Model.Model>()
-                .To<@Model.View>()
-                .OrderByDescending(@Model.ModelVarName => @(Model.ModelVarName).Id);
+                .To<@Model.Views["Index"]>()
+                .OrderByDescending(@Model.VarName => @(Model.VarName).Id);
         }
 
-        public void Create(@Model.View view)
+        public void Create(@Model.Views["Create"] view)
         {
-            @Model.Model @Model.ModelVarName = UnitOfWork.To<@Model.Model>(view);
+            @Model.Model @Model.VarName = UnitOfWork.To<@Model.Model>(view);
 
-            UnitOfWork.Insert(@Model.ModelVarName);
+            UnitOfWork.Insert(@Model.VarName);
             UnitOfWork.Commit();
         }
-        public void Edit(@Model.View view)
+        public void Edit(@Model.Views["Edit"] view)
         {
-            @Model.Model @Model.ModelVarName = UnitOfWork.To<@Model.Model>(view);
+            @Model.Model @Model.VarName = UnitOfWork.To<@Model.Model>(view);
 
-            UnitOfWork.Update(@Model.ModelVarName);
+            UnitOfWork.Update(@Model.VarName);
             UnitOfWork.Commit();
         }
         public void Delete(Int64 id)
