--- a/src/MvcTemplate.Web/Templates/Module/Tests/ControllerTests.cshtml
+++ b/src/MvcTemplate.Web/Templates/Module/Tests/ControllerTests.cshtml
@@ -11,18 +11,18 @@ using Xunit;
 
 namespace @Model.ControllerNamespace
 {
-    public class @Model.ControllerTests : IDisposable
+    public class @(Model.Controller)Tests : IDisposable
     {
         private DbContext context;
         private @Model.Model model;
         private @Model.Model otherModel;
         private @Model.Controller controller;
 
-        public @(Model.ControllerTests)()
+        public @(Model.Controller)Tests()
         {
             context = TestingContext.Create();
             UnitOfWork unitOfWork = new(TestingContext.Create(), TestingContext.Mapper);
-            controller = Substitute.ForPartsOf<@Model.Controller>(new @(Model.Validator)(unitOfWork), new @(Model.Service)(unitOfWork));
+            controller = Substitute.ForPartsOf<@Model.Controller>(new @(Model.Model)Validator(unitOfWork), new @(Model.Model)Service(unitOfWork));
 
             context.Drop().Add(model = ObjectsFactory.Create@(Model.Model)(-1));
             context.Add(otherModel = ObjectsFactory.Create@(Model.Model)(-2));
@@ -39,14 +39,14 @@ namespace @Model.ControllerNamespace
         [Fact]
         public void Index_@(Model.Models)()
         {
-            @(Model.Model)[] expected = context.Set<@Model.Model>().OrderByDescending(@Model.ModelVarName => @(Model.ModelVarName).Id).ToArray();
-            @(Model.View)[] actual = controller.Index().Returns<IQueryable<@Model.View>>().ToArray();
+            @(Model.Model)[] expected = context.Set<@Model.Model>().OrderByDescending(@Model.VarName => @(Model.VarName).Id).ToArray();
+            @(Model.Views["Index"])[] actual = controller.Index().Returns<IQueryable<@Model.Views["Index"]>>().ToArray();
 
             for (Int32 i = 0; i < expected.Length || i < actual.Length; i++)
             {
-@foreach (PropertyInfo property in Model.AllViewProperties.OrderByDescending(prop => prop.Name.Length).ThenBy(prop => prop.Name))
+@foreach (PropertyInfo property in Model.AllViewProperties["Index"].OrderByDescending(prop => prop.Name.Length).ThenBy(prop => prop.Name))
 {
-            if (Model.AllModelProperties.Any(prop => prop.Name == property.Name))
+            if (Model.AllProperties.Any(prop => prop.Name == property.Name))
             {
                 @:Assert.Equal(expected[i].@property.Name, actual[i].@property.Name);
             }
@@ -56,7 +56,7 @@ namespace @Model.ControllerNamespace
             }
 }
             }
-            @if (Model.ViewProperties.Length == 0)
+            @if (Model.ViewProperties["Index"].Length == 0)
             {
             @:Assert.True(false, "Not all properties tested");
             }
@@ -78,54 +78,54 @@ namespace @Model.ControllerNamespace
         {
             controller.ModelState.AddModelError("Test", "Error");
 
-            controller.Returns(controller.Create, ObjectsFactory.Create@(Model.View)(model.Id));
+            controller.Returns(controller.Create, ObjectsFactory.Create@(Model.Views["Create"])(model.Id));
 
             controller.ModelState.IsSingle("Test", "Error");
             Assert.Empty(controller.Alerts);
         }
-        @foreach (PropertyInfo index in Model.Indexes)
+        @foreach (PropertyInfo index in Model.Indexes["Create"])
         {
 @:
         @:[Fact]
         @:public void Create_Used@(index.Name)_Error()
         @:{
-        @:    @Model.View @Model.ModelVarName = ObjectsFactory.Create@(Model.View)(model.Id);
+        @:    @Model.Views["Create"] @Model.VarName = ObjectsFactory.Create@(Model.Views["Create"])(model.Id);
             if (index.PropertyType == typeof(String))
             {
-        @:    @(Model.ModelVarName).@(index.Name) = model.@(index.Name).ToUpper();
+        @:    @(Model.VarName).@(index.Name) = model.@(index.Name).ToUpper();
             }
             else
             {
-        @:    @(Model.ModelVarName).@(index.Name) = model.@(index.Name);
+        @:    @(Model.VarName).@(index.Name) = model.@(index.Name);
             }
 @:
-        @:    controller.Returns(controller.Create, @Model.ModelVarName);
+        @:    controller.Returns(controller.Create, @Model.VarName);
 @:
-        @:    controller.ModelState.IsSingle<@Model.View>(nameof(@(Model.View).@(index.Name)), "Unique@(index.Name)");
+        @:    controller.ModelState.IsSingle<@Model.Views["Create"]>(nameof(@(Model.Views["Create"]).@(index.Name)), "Unique@(index.Name)");
         @:    Assert.Empty(controller.Alerts);
         @:}
         }
 
         [Fact]
-        public void Create_@(Model.ModelShortName)()
+        public void Create_@(Model.ShortName)()
         {
-            @Model.View @Model.ModelVarName = ObjectsFactory.Create@(Model.View)(model.Id);
+            @Model.Views["Create"] @Model.VarName = ObjectsFactory.Create@(Model.Views["Create"])(model.Id);
 
-            controller.Create(@Model.ModelVarName);
+            controller.Create(@Model.VarName);
 
-            @Model.Model actual = context.Db<@Model.Model>().Single(@Model.ModelVarName => @(Model.ModelVarName).Id > otherModel.Id);
+            @Model.Model actual = context.Db<@Model.Model>().Single(@Model.VarName => @(Model.VarName).Id > otherModel.Id);
 
-            @if (Model.ModelProperties.Length == 0)
+            @if (Model.Properties.Length == 0)
             {
             @:Assert.True(false, "Not all properties tested");
             }
             else
             {
-                foreach (PropertyInfo property in Model.AllModelProperties.Where(prop => prop.Name != "Id").OrderByDescending(prop => Model.AllViewProperties.Any(p => p.Name == prop.Name)).ThenByDescending(prop => prop.Name.Length).ThenBy(prop => prop.Name))
+                foreach (PropertyInfo property in Model.AllProperties.Where(prop => prop.Name != "Id").OrderByDescending(prop => Model.AllViewProperties["Create"].Any(p => p.Name == prop.Name)).ThenByDescending(prop => prop.Name.Length).ThenBy(prop => prop.Name))
                 {
-                    if (Model.AllViewProperties.Any(prop => prop.Name == property.Name))
+                    if (Model.AllViewProperties["Create"].Any(prop => prop.Name == property.Name))
                     {
-            @:Assert.Equal(@(Model.ModelVarName).@property.Name, actual.@property.Name);
+            @:Assert.Equal(@(Model.VarName).@property.Name, actual.@property.Name);
                     }
                     else
                     {
@@ -139,7 +139,7 @@ namespace @Model.ControllerNamespace
         public void Create_Success_Redirect()
         {
             Object expected = controller.StaticRedirectTo(nameof(@(Model.Controller).Index));
-            Object actual = controller.Create(ObjectsFactory.Create@(Model.View)(model.Id));
+            Object actual = controller.Create(ObjectsFactory.Create@(Model.Views["Create"])(model.Id));
 
             Assert.Empty(controller.ModelState);
             Assert.Empty(controller.Alerts);
@@ -161,17 +161,17 @@ namespace @Model.ControllerNamespace
         public void Details_View()
         {
             @Model.Model expected = model;
-            @Model.View actual = controller.Details(model.Id).Returns<@Model.View>();
+            @Model.Views["Details"] actual = controller.Details(model.Id).Returns<@Model.Views["Details"]>();
 
-            @if (Model.ViewProperties.Length == 0)
+            @if (Model.ViewProperties["Details"].Length == 0)
             {
             @:Assert.True(false, "Not all properties tested");
             }
             else
             {
-                foreach (PropertyInfo property in Model.AllViewProperties.OrderByDescending(prop => prop.Name.Length).ThenBy(prop => prop.Name))
+                foreach (PropertyInfo property in Model.AllViewProperties["Details"].OrderByDescending(prop => prop.Name.Length).ThenBy(prop => prop.Name))
                 {
-                    if (Model.AllModelProperties.Any(prop => prop.Name == property.Name))
+                    if (Model.AllProperties.Any(prop => prop.Name == property.Name))
                     {
             @:Assert.Equal(expected.@property.Name, actual.@property.Name);
                     }
@@ -200,17 +200,17 @@ namespace @Model.ControllerNamespace
         public void Edit_View()
         {
             @Model.Model expected = model;
-            @Model.View actual = controller.Edit(model.Id).Returns<@Model.View>();
+            @Model.Views["Edit"] actual = controller.Edit(model.Id).Returns<@Model.Views["Edit"]>();
 
-            @if (Model.ViewProperties.Length == 0)
+            @if (Model.ViewProperties["Edit"].Length == 0)
             {
             @:Assert.True(false, "Not all properties tested");
             }
             else
             {
-                foreach (PropertyInfo property in Model.AllViewProperties.OrderByDescending(prop => prop.Name.Length).ThenBy(prop => prop.Name))
+                foreach (PropertyInfo property in Model.AllViewProperties["Edit"].OrderByDescending(prop => prop.Name.Length).ThenBy(prop => prop.Name))
                 {
-                    if (Model.AllModelProperties.Any(prop => prop.Name == property.Name))
+                    if (Model.AllProperties.Any(prop => prop.Name == property.Name))
                     {
             @:Assert.Equal(expected.@property.Name, actual.@property.Name);
                     }
@@ -229,64 +229,64 @@ namespace @Model.ControllerNamespace
         {
             controller.ModelState.AddModelError("Test", "Error");
 
-            controller.Returns(controller.Edit, ObjectsFactory.Create@(Model.View)(model.Id));
+            controller.Returns(controller.Edit, ObjectsFactory.Create@(Model.Views["Edit"])(model.Id));
 
             controller.ModelState.IsSingle("Test", "Error");
             Assert.Empty(controller.Alerts);
         }
-        @foreach (PropertyInfo index in Model.Indexes)
+        @foreach (PropertyInfo index in Model.Indexes["Edit"])
         {
 @:
         @:[Fact]
         @:public void Edit_Used@(index.Name)_Error()
         @:{
-        @:    @Model.View @Model.ModelVarName = ObjectsFactory.Create@(Model.View)(model.Id);
+        @:    @Model.Views["Edit"] @Model.VarName = ObjectsFactory.Create@(Model.Views["Edit"])(model.Id);
             if (index.PropertyType == typeof(String))
             {
-        @:    @(Model.ModelVarName).@(index.Name) = otherModel.@(index.Name).ToUpper();
+        @:    @(Model.VarName).@(index.Name) = otherModel.@(index.Name).ToUpper();
             }
             else
             {
-        @:    @(Model.ModelVarName).@(index.Name) = otherModel.@(index.Name);
+        @:    @(Model.VarName).@(index.Name) = otherModel.@(index.Name);
             }
 @:
-        @:    controller.Returns(controller.Edit, @Model.ModelVarName);
+        @:    controller.Returns(controller.Edit, @Model.VarName);
 @:
-        @:    controller.ModelState.IsSingle<@Model.View>(nameof(@(Model.View).@(index.Name)), "Unique@(index.Name)");
+        @:    controller.ModelState.IsSingle<@Model.Views["Edit"]>(nameof(@(Model.Views["Edit"]).@(index.Name)), "Unique@(index.Name)");
         @:    Assert.Empty(controller.Alerts);
         @:}
         }
 
         [Fact]
-        public void Edit_@(Model.ModelShortName)()
+        public void Edit_@(Model.ShortName)()
         {
-            @Model.View @Model.ModelVarName = ObjectsFactory.Create@(Model.View)(model.Id);
-            @{ IEnumerable<String> changes = Model.ViewProperties.Select(property =>
+            @Model.Views["Edit"] @Model.VarName = ObjectsFactory.Create@(Model.Views["Edit"])(model.Id);
+            @{ IEnumerable<String> changes = Model.ViewProperties["Edit"].Select(property =>
             {
                 Type type = Nullable.GetUnderlyingType(property.PropertyType) ?? property.PropertyType;
- 
+
                 if (property.PropertyType == typeof(DateTime?))
                 {
-                    return $"{Model.ModelVarName}.{property.Name} = model.{property.Name} = model.{property.Name}!.Value.AddDays(1)";
+                    return $"{Model.VarName}.{property.Name} = model.{property.Name} = model.{property.Name}!.Value.AddDays(1)";
                 }
                 if (type == typeof(DateTime))
                 {
-                    return $"{Model.ModelVarName}.{property.Name} = model.{property.Name} = model.{property.Name}.AddDays(1)";
+                    return $"{Model.VarName}.{property.Name} = model.{property.Name} = model.{property.Name}.AddDays(1)";
                 }
                 if (type == typeof(Boolean))
                 {
-                    return $"{Model.ModelVarName}.{property.Name} = model.{property.Name} = !model.{property.Name}";
+                    return $"{Model.VarName}.{property.Name} = model.{property.Name} = !model.{property.Name}";
                 }
                 if (type == typeof(String))
                 {
-                    return $"{Model.ModelVarName}.{property.Name} = model.{property.Name} += \"Test\"";
+                    return $"{Model.VarName}.{property.Name} = model.{property.Name} += \"Test\"";
                 }
                 if (type.IsEnum)
                 {
-                    return $"{Model.ModelVarName}.{property.Name} = model.{property.Name} = {type.Name}.{Enum.GetNames(type).Skip(1).FirstOrDefault()}";
+                    return $"{Model.VarName}.{property.Name} = model.{property.Name} = {type.Name}.{Enum.GetNames(type).Skip(1).FirstOrDefault()}";
                 }
 
-                return $"{Model.ModelVarName}.{property.Name} = model.{property.Name} += 1";
+                return $"{Model.VarName}.{property.Name} = model.{property.Name} += 1";
             }).OrderByDescending(change => change.Length);
             }
 @foreach(String change in changes)
@@ -294,17 +294,17 @@ namespace @Model.ControllerNamespace
             @:@change;
 }
 
-            controller.Edit(@Model.ModelVarName);
+            controller.Edit(@Model.VarName);
 
-            @Model.Model actual = context.Db<@Model.Model>().Single(@Model.ModelVarName => @(Model.ModelVarName).Id == model.Id);
+            @Model.Model actual = context.Db<@Model.Model>().Single(@Model.VarName => @(Model.VarName).Id == model.Id);
 
-            @if (Model.ModelProperties.Length == 0)
+            @if (Model.Properties.Length == 0)
             {
             @:Assert.True(false, "Not all properties tested");
             }
             else
             {
-                foreach (PropertyInfo property in Model.AllModelProperties.OrderByDescending(prop => prop.Name.Length).ThenBy(prop => prop.Name))
+                foreach (PropertyInfo property in Model.AllProperties.OrderByDescending(prop => prop.Name.Length).ThenBy(prop => prop.Name))
                 {
             @:Assert.Equal(model.@property.Name, actual.@property.Name);
                 }
@@ -315,7 +315,7 @@ namespace @Model.ControllerNamespace
         public void Edit_Success_Redirect()
         {
             Object expected = controller.StaticRedirectTo(nameof(@(Model.Controller).Index));
-            Object actual = controller.Edit(ObjectsFactory.Create@(Model.View)(model.Id));
+            Object actual = controller.Edit(ObjectsFactory.Create@(Model.Views["Edit"])(model.Id));
 
             Assert.Empty(controller.ModelState);
             Assert.Empty(controller.Alerts);
@@ -337,17 +337,17 @@ namespace @Model.ControllerNamespace
         public void Delete_View()
         {
             @Model.Model expected = model;
-            @Model.View actual = controller.Delete(model.Id).Returns<@Model.View>();
+            @Model.Views["Edit"] actual = controller.Delete(model.Id).Returns<@Model.Views["Edit"]>();
 
-            @if (Model.ViewProperties.Length == 0)
+            @if (Model.ViewProperties["Delete"].Length == 0)
             {
             @:Assert.True(false, "Not all properties tested");
             }
             else
             {
-                foreach (PropertyInfo property in Model.AllViewProperties.OrderByDescending(prop => prop.Name.Length).ThenBy(prop => prop.Name))
+                foreach (PropertyInfo property in Model.AllViewProperties["Delete"].OrderByDescending(prop => prop.Name.Length).ThenBy(prop => prop.Name))
                 {
-                    if (Model.AllModelProperties.Any(prop => prop.Name == property.Name))
+                    if (Model.AllProperties.Any(prop => prop.Name == property.Name))
                     {
             @:Assert.Equal(expected.@property.Name, actual.@property.Name);
                     }
@@ -362,11 +362,11 @@ namespace @Model.ControllerNamespace
         }
 
         [Fact]
-        public void DeleteConfirmed_@(Model.ModelShortName)()
+        public void DeleteConfirmed_@(Model.ShortName)()
         {
             controller.DeleteConfirmed(model.Id);
 
-            Assert.Single(context.Db<@Model.Model>(), @Model.ModelVarName => @(Model.ModelVarName).Id != model.Id);
+            Assert.Single(context.Db<@Model.Model>(), @Model.VarName => @(Model.VarName).Id != model.Id);
         }
 
         [Fact]
