--- a/src/MvcTemplate.Web/Templates/_ViewImports.cshtml
+++ b/src/MvcTemplate.Web/Templates/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 @using Humanizer;
 @using MvcTemplate.Components.Mvc;
+@using MvcTemplate.Components.Tree;
 @using MvcTemplate.Web.Templates;
 @using System.Reflection;
 @using System.Text.RegularExpressions;
