Input mode hints
- Added input mode hints on inputs to improve mobile usability.

--- a/src/MvcTemplate.Web/Views/Auth/Recover.cshtml
+++ b/src/MvcTemplate.Web/Views/Auth/Recover.cshtml
@@ -9,7 +9,7 @@
 
     <div class="input-group">
         <span class="fa fa-envelope"></span>
-        <input asp-for="Email" asp-placeholder />
+        <input asp-for="Email" asp-placeholder class="text-lowercase" inputmode="email" />
         <span class="input-error fa fa-exclamation-triangle" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="-"></span>
     </div>
 
