--- a/src/MvcTemplate.Web/wwwroot/css/shared/content.css
+++ b/src/MvcTemplate.Web/wwwroot/css/shared/content.css
@@ -79,6 +79,10 @@ body.private {
     display: none;
 }
 
+.control-content input::placeholder {
+    text-transform: none !important;
+}
+
 .control-validation {
     color: #dc3545;
     min-height: 0;
