--- a/src/MvcTemplate.Web/Views/Administration/Accounts/Create.cshtml
+++ b/src/MvcTemplate.Web/Views/Administration/Accounts/Create.cshtml
@@ -35,7 +35,7 @@
                         <label asp-for="Email"></label>
                     </div>
                     <div class="control-content col-md-8 col-xl-4">
-                        <input asp-for="Email" />
+                        <input asp-for="Email" class="text-lowercase" inputmode="email" />
                     </div>
                     <div class="control-validation offset-md-4 col-md-8 offset-xl-0 col-xl-6">
                         <span asp-validation-for="Email"></span>
