--- a/src/MvcTemplate.Web/Views/Administration/Accounts/Details.cshtml
+++ b/src/MvcTemplate.Web/Views/Administration/Accounts/Details.cshtml
@@ -27,7 +27,7 @@
                     <label asp-for="Email"></label>
                 </div>
                 <div class="control-content col-md-8 col-xl-4">
-                    <input asp-for="Email" />
+                    <input asp-for="Email" class="text-lowercase" inputmode="email" />
                 </div>
             </div>
             <div class="form-group row">
